overflow issues fixed

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
 *{
   box-sizing: border-box;
 }
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -20,7 +27,7 @@ body {
   flex-direction: column;
   /* align-items: center;
   justify-content: center; */
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   /* padding: 0 10px; */
 }
